# UA-AnsiC

./: CMakeLists.txt
Stack/: CMakeLists.txt  uastack-config.cmake.in
Stack/core/: opcua_config.h  opcua_core.h  opcua_errorhandling.h
Stack/securechannel/: opcua_securestream.c
Stack/stackcore/: opcua_binarydecoder.c  opcua_builtintypes.h  opcua_credentials.h  opcua_pki.h
